[package]
name = "themelio-nodeprot"
version = "0.12.0"
authors = ["Themelio Labs"]
edition = "2018"

description = "High-level API for the Themelio full node peer-to-peer protocol."
license = "MPL-2.0"
repository = "https://github.com/themeliolabs/themelio-nodeprot"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1.0.145"
features = ["derive"]

[dependencies]
# cached = "0.26.2"
hex = "0.4.3"
log = "0.4.17"
novasmt = "0.2.19"
smol = "1.2.5"
smolscale = "0.3.41"
stdcode = "0.1.10"
# themelio-stf = "0.10"
themelio-structs= "0.2.10"
tmelcrypt = "0.2.4"
thiserror = "1.0.37"
anyhow= "1.0.65"
async-trait = "0.1.57"
# moka = "0.7.1"
bytes = "1.2.1"
derivative = "2.2.0"
lru = "0.7.8"
once_cell = "1.15.0"
async-recursion = "1.0.0"
rustc-hash = "1.1.0"
arrayref = "0.3.6"
parking_lot = "0.12.1"
nanorpc = "0.1.7"
# nanorpc={path="../nanorpc"}
serde_json = "1.0.85"
smol_str = "0.1.23"
melnet2 = "0.1.8"
melnet = "0.2.27"

[dev-dependencies]
argh = "0.1.9"
# melnet2 = { path = "../melnet2" }
