[package]
name = "melprot"
version = "0.13.8"
edition = "2021"
description = "High-level API for the Mel full node peer-to-peer protocol."
license = "MPL-2.0"
repository = "https://github.com/themeliolabs/melprot"

[dependencies]
log = "0.4.21"
novasmt = "0.2.20"
smol = "2.0.0"
smolscale = "0.4.4"
stdcode = "0.1.14"
melstructs = "0.3"
tmelcrypt = "0.2.7"
thiserror = "1.0.61"
anyhow = "1.0.85"
async-trait = "0.1.80"
bytes = { version = "1.6.0", features = ["serde"] }
derivative = "2.2.0"
once_cell = "1.19.0"
async-recursion = "1.1.1"
parking_lot = "0.12.2"
nanorpc = "0.1.12"
melnet2 = "0.3"
futures-util = "0.3.30"
melbootstrap = "0.8.5"
mini-moka = "0.10.3"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
